fix nav spacing on smaller mobile devices

--- a/sass/docs.scss
+++ b/sass/docs.scss
@@ -288,7 +288,7 @@ a {
 }
 
 .nav-item {
-  margin-right: $mobile-spacing;
+  margin-right: .7rem;
   font-size: .8em;
   color: #fff;
   line-height: 1;
